# object-oriented-programming

./: .gitignore  .gitmodules  .travis.yml  README.md
module1/: 00_intro.en.md  00_intro.pl.md  01-class-vs-object.md  01_access_modifiers.en.md  01_access_modifiers.pl.md  02-composition-vs-aggregation.md  02_ctor_dtor.en.md  03-access-modifiers.md  03_hermetization.en.md  04-class-vs-struct.md  04_tasks.en.md  05-ctor-dtor.md  05_homework.en.md  05_homework.pl.md  06-hermetization.md  07-tasks.md  08-const-methods.md  09-operators.md  10-tasks.md  11-recap.md  12-homework.md  13-project.md  computer.cpp  index.en.html  index.html  index.pl.html  person.cpp  presentation ctor_dtor.md  presentation.md  presentation_access_modifiers.md  presentation_hermetization.md  presentation_homework.md  presentation_oop_intro.md  presentation_tasks.md  zadanie1.cpp  zadanie2.cpp  zadanie2_dla_ciekawskich.cpp  zadanie3.cpp  zadanie4.cpp  zadanie5.cpp  (+1 more)
module2/: 00_inheritance.en.md  00_inheritance.pl.md  01-inheritance.md  01_virtual.en.md  03-tasks.md  (+33 more)
shm/: .clang-format  .gitignore  .travis.yml  Action.hpp  Alcohol.cpp  Alcohol.h  Alcohol.hpp  CMakeLists.txt  CMakeLists2.txt.in  Cargo.cpp  Cargo.h  Cargo.hpp  Coordinates.cpp  Coordinates.h  Coordinates.hpp  DefaultCargo.cpp  DefaultCargo.hpp  Delegate.hpp  DryFruit.cpp  DryFruit.hpp  Fortune.hpp  Fruit.cpp  Fruit.h  Fruit.hpp  Game.cpp  Game.h  Game.hpp  GeneralPrint.cpp  GeneralPrint.hpp  IDelegate.hpp  Island.cpp  Island.h  Island.hpp  Item.cpp  Item.h  Item.hpp  Makefile  Map.cpp  Map.h  Map.hpp  (+109 more)
shm/.github/workflows/: main.yml  shm.yml
shm/Cargos/: Alcohol.cpp  Alcohol.hpp  Cargo.cpp  Cargo.hpp  Cargos.hpp  DefaultCargo.cpp  DryFruit.cpp  DryFruit.hpp  Fruit.cpp  Fruit.hpp  Item.hpp
shm/Commands/: Command.hpp  Commands.hpp  ExitCommand.cpp  ExitCommand.hpp  MainMenuCommand.cpp  MainMenuCommand.hpp  NextDayCommand.cpp  NextDayCommand.hpp  TradeBuyCommand.cpp  TradeBuyCommand.hpp  TradeCommand.cpp  TradeCommand.hpp  TradeSellCommand.cpp  TradeSellCommand.hpp  TravelCommand.cpp  TravelCommand.hpp
shm/Tests/: TestAlcohol.hpp  TestCoordinates.hpp  TestDefaultCargo.hpp  TestDryDruit.hpp  TestFruit.hpp  TestItem.hpp  TestStore.hpp  Tests.cpp
shm/Tests/catch2/: TestAlcohol.hpp  TestCoordinates.hpp  TestDefaultCargo.hpp  TestFruit.hpp  TestItem.hpp  TestStore.hpp  Tests.cpp
shm/Tests/gtests/: TestAlcohol.hpp  TestCoordinates.hpp  TestDefaultCargo.hpp  TestDryDruit.hpp  TestFruit.hpp  TestItem.hpp  TestStore.hpp  Tests.cpp  main.cpp
shm/inc/: Alcohol.hpp  Cargo.hpp  Coordinates.hpp  Delegate.hpp  DryFruit.hpp  Fruit.hpp  Game.hpp  Island.hpp  Item.hpp  Map.hpp  Player.hpp  Ship.hpp  Store.hpp  Subscriber.hpp  Time.hpp  alcohol.hpp  cargo.hpp  cargoHolder.hpp  cloneable.hpp  common.hpp  coordinates.hpp  delegate.hpp  dryfruit.hpp  fruit.hpp  game.hpp  globaltime.hpp  island.hpp  item.hpp  map.hpp  observer.hpp  player.hpp  ship.hpp  store.hpp  time.hpp
shm/include/: Buy.hpp  Command.hpp  PrintCargo.hpp  Sell.hpp  Travel.hpp  alcohol.hpp  buy.hpp  cargo.hpp  commands.hpp  coordinates.hpp  fruit.hpp  game.hpp  island.hpp  item.hpp  locators.hpp  map.hpp  observer.hpp  player.hpp  print_cargo.hpp  sell.hpp  ship.hpp  store.hpp  time.hpp  travel.hpp
shm/settings/: items.txt
shm/source/: Alcohol.cpp  Alcohol.hpp  Cargo.cpp  Cargo.hpp  Delegate.hpp  DryFruit.cpp  DryFruit.hpp  Fortune.cpp  Fortune.hpp  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Island.cpp  Island.hpp  Item.cpp  Item.hpp  Map.cpp  Map.hpp  Observer.hpp  Player.cpp  Player.hpp  Ship.cpp  Ship.hpp  Store.cpp  Store.hpp  Time.cpp  Time.hpp
shm/src/: Alcohol.cpp  CMakeLists.txt  Cargo.cpp  Coordinates.cpp  DryFruit.cpp  Fruit.cpp  Game.cpp  Island.cpp  Item.cpp  Map.cpp  MapAlternativeVersion.cpp  Player.cpp  Ship.cpp  Store.cpp  Time.cpp  Travel.cpp  alcohol.cpp  buy.cpp  cargo.cpp  commands.cpp  common.cpp  coordinates.cpp  dryfruit.cpp  fruit.cpp  game.cpp  globaltime.cpp  island.cpp  item.cpp  locators.cpp  main.cpp  map.cpp  player.cpp  print_cargo.cpp  sell.cpp  ship.cpp  store.cpp  time.cpp  travel.cpp
shm/test/: TestCargo.cpp  fruit_test.cpp  item_test.cpp  ship_gt.cpp  store_test.cpp  test.cpp  test_main.cpp
shm/tests/: AlcoholTest.cpp  CMakeLists.txt  NextDayTest.cpp  TravelTests.cpp  alcohol_test.cpp  cargo_test.cpp  coordinatesTest.cpp  fruit_test.cpp  island_test.cpp  item_test.cpp  map_test.cpp  player_test.cpp  ship_test.cpp  test.cpp
shm/tests/mocks/: itemMock.hpp
shm/ut/: alcohol_test.cpp  coordinates_test.cpp  fruit_test.cpp
(+75 files in other folders)
